css/base.css
/* ... */
.mes_text {
    padding: 0;
    line-height: var(--lineHeight);

    & p {
        margin-bottom: var(--lineHeight);

        &:has(+ ol),
        &:has(+ ul) {
            margin-bottom: calc(var(--lineHeight) / 2);
        }

        hr + & {
            margin-top: var(--lineHeight);
        }
    }

    & h1,
    & h2,
    & h3,
    & h4,
    & a:not(.fa-solid) {
        margin: 0 0 calc(var(--lineHeight) / 2) 0;

        hr ~ & {
            margin: var(--lineHeight) 0 calc(var(--lineHeight) / 2) 0;
        }
    }

    & ol,
    & ul {
        margin-block: calc(var(--lineHeight) / 2);
        padding-inline-start: 1.5rem;

        &:has(+ p) {
            margin-block-end: var(--lineHeight);
        }

        & p {
            margin-bottom: calc(var(--lineHeight) / 3);
        }

        &:has(+ hr) {
            margin-bottom: var(--lineHeight);
        }

        & li ol,
        & li ul {
            margin-block-start: 0;
        }
    }

    & blockquote {
        & p {
            margin-bottom: 0;
        }

        &:has(+ hr) p,
        &:has(+ p) p {
            margin-bottom: var(--lineHeight);
        }
    }

    & img {
        max-height: 90dvh !important;
        border-radius: var(--borderRadiusSmol);
    }

    #curEditTextarea {
        resize: none;
        font-family: inherit;
        font-weight: inherit;
        line-height: calc(var(--mainFontSize) + 0.5rem);
        background-color: transparent;
        border: none;
        padding: 0;

        &:focus {
            outline: none;
        }
    }

    & > :last-child {
        margin-bottom: 0;
    }
}

/* Reasoning */
details {
    &.mes_reasoning_details,
    &.mes_reasoning_details .mes_reasoning_summary {
        margin-right: 0;
    }

    & .mes_reasoning_header {
        margin: var(--insidePadding) 0;
        background-color: transparent;
        padding-left: 0;
        margin-top: 0;

        &:not(:hover) {
            color: var(--SmartThemeEmColor);
        }
    }

    & .mes_reasoning {
        border-radius: 0;
        border-left: 0.25rem solid var(--SmartThemeEmColor);
        background-color: transparent;
        margin-bottom: 0;
    }
}

.swipes {
    align-items: center;

    &:has(.swipes-counter[style="display: none;"]) {
        display: none;
    }

    & .swipes-counter {
        opacity: 0.7 !important;
        font-size: 0.9rem;
        font-weight: 600;
        padding: 0;
        min-width: auto;
        margin-bottom: 0.075rem;
    }

    & .mes_swipe_left,
    & .mes_swipe_right {
        cursor: pointer;
        filter: drop-shadow(0 0 0.125rem black);
        opacity: 0;
        transition: var(--transition);
        padding-top: 0.35rem;
        will-change: opacity;

        &:hover {
            opacity: 1;
            background-color: var(--white20a);
        }
    }
}

#scrollToBottom {
    display: flex;
    gap: 0.5rem;
    position: fixed;
    background-color: var(--black30a);
    color: var(--SmartThemeBodyColor);
    bottom: 4rem;
    align-self: center;
    align-items: center;
    z-index: 100;
    padding: 0.625rem;
    backdrop-filter: blur(var(--backdropBlur));
    border-radius: var(--borderRadius);
    font-weight: 500;
    cursor: pointer;
    opacity: 0;
    visibility: hidden;
    transition:
        opacity 0.1s ease-in-out,
        visibility 0s 0.1s;
    will-change: opacity, visibility;

    &.show {
        opacity: 1;
        visibility: visible;
        transition:
            opacity 0.1s ease-in-out,
            visibility 0s 0s;
    }

    & i {
        position: relative;
    }

    #sheld:has(#file_form:not(.displayNone)) & {
        bottom: 6.5rem;
    }
}

@keyframes splash {
    0% {
        transform: scale(0.9) rotate(-10deg);
    }

    100% {
        transform: scale(1) rotate(-10deg);
    }
}

#splash {
    text-align: center;
    color: yellow;
    height: 0;
    margin: 0;
    font-style: normal;
    font-family: var(--monoFontFamily);
    animation: 0.25s infinite alternate splash;
    position: relative;
    text-shadow: 0.125rem 0.125rem rgb(63, 63, 0) !important;
}

.icon-svg {
    align-self: unset;
}

#toast-container {
    top: 0 !important;
    z-index: 999999;
}

